--- a/prometeus_stack/node_exporter/docker-compose.yaml
+++ b/prometeus_stack/node_exporter/docker-compose.yaml
@@ -11,7 +11,5 @@ services:
       - '--path.rootfs=/rootfs'
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
-    expose:
-      - 9100
-    networks:
-      - monitoring
+    ports:
+      - 9100:9100
